Added SVG logo and better favicons

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <div id="footer-left">{{partial "copyright" .}}</div>
-    <a id="footer-home" href="/">eth0net</a>
+    <a id="footer-logo" href="/">{{partial "logo"}}</a>
     <div id="footer-right">{{partial "menu" $.Site.Menus.right}}</div>
   </div>
 </footer>
